[tool.poetry]
name = "acc"
version = "0.1.0"
description = "Adaptive Cruise Control"
authors = ["Tomas Sanchez <info@tomsanchez.com.ar>", "Araceli Soffulto <asoffulto@frba.utn.edu.ar>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "acc" }]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.1"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
